# ChangeLog for dev-db/hsqldb
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/ChangeLog,v 1.22 2007/01/09 15:34:06 caster Exp $

  13 Feb 2007; Vlastimil Babka <caster@gentoo.org>
  -hsqldb-1.7.3.1-r1.ebuild, -hsqldb-1.7.3.1-r2.ebuild,
  -hsqldb-1.7.3.1-r3.ebuild, -files/init.d-hsqldb-typos.patch,
  -files/server.properties, -files/server.properties-r1, -files/sqltool.rc,
  -files/sqltool.rc-r1:
  Remove 1.7.3.1 stuff that was just copied from main portage tree.

  12 Feb 2007; kiorky <kiorky@cryptelium.net> +files/sqltool.rc-1.8,
  +hsqldb-1.8.0.4.ebuild, +files/35hsqldb, +files/server.properties-1.8,
  +files/bundle-all-tools.patch, +files/hsqldb,
  +files/init.d-hsqldb-typos.patch, +files/resolve-config-softlinks.patch,
  +files/server.properties, +files/server.properties-r1, +files/sqltool.rc,
  +files/sqltool.rc-r1, +metadata.xml:
  Bump to version 1.8.0.4
  see #111960

  09 Jan 2007; Vlastimil Babka <caster@gentoo.org> hsqldb-1.7.3.1-r2.ebuild,
  hsqldb-1.7.3.1-r3.ebuild:
  Convert einfo to elog.

  23 Dec 2006; Timothy Redaelli <drizzt@gentoo.org>
  hsqldb-1.7.3.1-r3.ebuild:
  Applied patch for fbsd wrt bug #157974 (authorized by Caster).
  Add ~x86-fbsd keyword.

  26 Nov 2006; Petteri Räty <betelgeuse@gentoo.org>
  hsqldb-1.7.3.1-r3.ebuild:
  Fixed to compile with system VM set to something else than dev-java/sun-jdk.

  06 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  hsqldb-1.7.3.1-r3.ebuild:
  Drop sparc for real

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  hsqldb-1.7.3.1-r1.ebuild, hsqldb-1.7.3.1-r2.ebuild:
  Dropping sparc keywords, see #96229

  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org> hsqldb-1.7.3.1-r1.ebuild,
  hsqldb-1.7.3.1-r2.ebuild:
  Added calls to java-pkg_pkg_setup, see bug #142708.

  22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  hsqldb-1.7.3.1-r3.ebuild:
  ant_src_unpack -> src_unpack
