@@ -23,14 +23,19 @@ MD5 908a29dbac6506f4415285f14ca4d7ad files/sqltool.rc-1.8 3681
 RMD160 1420f6f46b8d2a3619eb260ae487f15d0c2cde82 files/sqltool.rc-1.8 3681
 SHA256 d1d29316b20f5208e0200a9ebf2c366344822b82889eb9314c2962a728a2a361 files/sqltool.rc-1.8 3681
 DIST hsqldb_1_8_0_4.zip 3262313 RMD160 7e283f35af5caea44b84b0c570b64bd0e57b2787 SHA1 1996cd1b63e509048c9d09dcbdc78fd20872f9e9 SHA256 f40fb9c345fe5cd08fe5a3b789612710e786b5b43cc6afa8608f4b04adb3bb04
+DIST hsqldb_1_8_0_7.zip 3276605 RMD160 d1c6008ae9c9cd64f28e8f75d980474693157b4d SHA1 6f8f67be9453d6e2bf958086b181bb769793307a SHA256 c35fe3c40fba7596e14c096cd0f3f8b70ac46610da7c5878a0ead6b454f5009c
 EBUILD hsqldb-1.8.0.4.ebuild 5005 RMD160 16db5d862558263a6c008a7321feffaaba3e2bd3 SHA1 334dfe0135353a2952030ba5c428d7ed81a04402 SHA256 272ce2c14222ed56416a9dde1b46230e43d09cc33ec363919a242e3d444e079f
 MD5 bbc4b3c7e9b72b2ca824b8ead734af77 hsqldb-1.8.0.4.ebuild 5005
 RMD160 16db5d862558263a6c008a7321feffaaba3e2bd3 hsqldb-1.8.0.4.ebuild 5005
 SHA256 272ce2c14222ed56416a9dde1b46230e43d09cc33ec363919a242e3d444e079f hsqldb-1.8.0.4.ebuild 5005
-MISC ChangeLog 4066 RMD160 241b433042decace5034e16529af61d4362750b6 SHA1 7605a89812e9d92c6258492e3af40af9cf35000a SHA256 2cc209c4d7dead9fbb5cbbecb7dd7e1b4008ed3c96116b8b1ce4499d3133e351
-MD5 748ad2929fac30e79e0a27a0d556e52b ChangeLog 4066
-RMD160 241b433042decace5034e16529af61d4362750b6 ChangeLog 4066
-SHA256 2cc209c4d7dead9fbb5cbbecb7dd7e1b4008ed3c96116b8b1ce4499d3133e351 ChangeLog 4066
+EBUILD hsqldb-1.8.0.7.ebuild 5045 RMD160 abd2dd422303e79818d4375064e93f96c68d2a86 SHA1 d225d679bdbce13080af5b848ba977f1385d54c0 SHA256 c53f5f3dea6f28867a1e73b315168032cb12028303382b3a17b57eb0b14e7752
+MD5 9442f43df8664f6fcefd70b8e6fbd6a9 hsqldb-1.8.0.7.ebuild 5045
+RMD160 abd2dd422303e79818d4375064e93f96c68d2a86 hsqldb-1.8.0.7.ebuild 5045
+SHA256 c53f5f3dea6f28867a1e73b315168032cb12028303382b3a17b57eb0b14e7752 hsqldb-1.8.0.7.ebuild 5045
+MISC ChangeLog 4201 RMD160 be6d339359ce46e4faab9a28047066a03c79f323 SHA1 b8dfc263f36875885cf6036c833d3c7365360878 SHA256 5b7670dda0abe0d2ced081d41c6c4377ac2e49d6d5760fc9c621e1bb916e9b1f
+MD5 5fce0d5c6b1fe2bcbb0d8976883af06c ChangeLog 4201
+RMD160 be6d339359ce46e4faab9a28047066a03c79f323 ChangeLog 4201
+SHA256 5b7670dda0abe0d2ced081d41c6c4377ac2e49d6d5760fc9c621e1bb916e9b1f ChangeLog 4201
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
 MD5 123cf9440c1d4ac78f2caba1624765f9 metadata.xml 158
 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 metadata.xml 158
@@ -38,3 +43,6 @@ SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb metadata
 MD5 15bf3c6b67d3a75235e56d0f1ca4bf03 files/digest-hsqldb-1.8.0.4 238
 RMD160 6461b85c254066d42d2a06bbbe31e65d22db9b90 files/digest-hsqldb-1.8.0.4 238
 SHA256 d30534fc97246b097a18353ab238281d5aec6b2a22c4d1b9df1a3c2641f497b6 files/digest-hsqldb-1.8.0.4 238
+MD5 5692b8a713a335cf7313ef0f4a558634 files/digest-hsqldb-1.8.0.7 238
+RMD160 8578ec92a81ab9a962da5a6b5370af946506253c files/digest-hsqldb-1.8.0.7 238
+SHA256 8fc132fa21a00cd3a83c83107154303d47bddcc1e3ffbc264a890f79659a18af files/digest-hsqldb-1.8.0.7 238
