@@ -1,0 +1,3 @@
+MD5 d7ae87f80599e740c2590cd43341c075 hsqldb_1_8_0_7.zip 3276605
+RMD160 d1c6008ae9c9cd64f28e8f75d980474693157b4d hsqldb_1_8_0_7.zip 3276605
+SHA256 c35fe3c40fba7596e14c096cd0f3f8b70ac46610da7c5878a0ead6b454f5009c hsqldb_1_8_0_7.zip 3276605
